<resources>
    <string name="app_name">Movie Playground</string>
    <string name="hello_ardian">Hello Ardian</string>
    <string name="watch_your_favorite_movie">Watch your favorite movie</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <string name="see_all"><![CDATA[See all >]]></string>
    <string name="genre">genre</string>
    <string name="romance">Romance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>